# simple_ip_interface

./: .gitignore  CMakeLists.txt  main.c
include/: uart.h  vibration.h
